preliminary fix for gap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -575,7 +575,7 @@ button:focus, button:active, button:hover, .btn:focus, .btn:active, .btn:hover, 
   top: 60px;
   bottom: 0;
   background-color: #c0d6cd;
-  color: #fff;
+  color: #263a52;
   line-height: 1;
   visibility: hidden;
   opacity: 0;
@@ -1084,11 +1084,11 @@ body {
 }
 
 .header-wrap.top-bar-open + .aw-main .product-top.fixed {
-  top:115px;
+  top:110px;
 }
 
 .header-wrap.top-bar-open + .aw-main  {
-  padding-top:34px;
+  padding-top:28px;
 }
 
 .admin-tabs .active-tab {
